
5.2a2 -> 5.2a3:
    - jbj: merge "support-wildcards-in-EVR-comparison" patch (OpenPKG).
    - jbj: invert the sense of a <-> b comparison, change sign of Mandriva override.
    - jbj: bury MDV file triggers under RPM_VENDOR_MANDRIVA.
    - jbj: use poptSaneFile() when available (popt-1.15).
    - jbj: use poptReadConfigFiles() when available (popt-1.15).
    - provyind: python: build with -fno-strict-aliasing.
    - proyvind: tevr: fix build issues.
    - proyvind: add RPMTAG_DISTTAG to optionalTags so that it may be used as
	%{disttag}.
    - rpm.org: add %{_default_patch_flags} macro for patch options
    - proyvind: add -Werror=format-security to gcc warning flags.
    - proyvind: xzdio: rename from lzdio.
    - proyvind: lzdio: set memlimit for decoding to 100MiB.
    - proyvind: add support for xz for all tools shipped with rpm. 
    - proyvind: lzdio: add support for xz format. (removes liblzma 4.999.3 support)
    - jbj: rpmgc: display errors with gcry_strerror().
    - jbj: rpmnss: eliminate pubkey type wrapping methods.
    - jbj: stub in pgpImpl{Set,Verify}ECDSA methods.
    - jbj: rpmnss: fix: correct RSA/SHA512 cut-n-paste error.
    - jbj: rpmssl: don't bother with (unused) NID_foo.
    - jbj: use digest names in debugging messages.
    - jbj: name digests according to RFC 4880 section 9.4.
    - jbj: rename s/hdrmd5ctx/hdrctx/ used by RSA to avoid legacy confusions.
    - jbj: fix: RSA V4 signed *.rpm plaintext hash was not generated correctly.
    - jbj: ensure that digest agrees with signature hash algorithm.
    - jbj: digest: add getters for digest name/algo/ANS1oid.
    - jbj: rpmssl: functional RSA verify --usecrypto ssl for signature(...) probe.
    - jbj: rpmgc: functional RSA verify --usecrypto gc for signature(...) probe.
    - jbj: rpmgc: bulldoze the RSA compost. still not working yet ...
    - jbj: rpmpgp: add ASN1 goop for SHA-224, add to bc/gc/nss/ssl.
    - jbj: bury file actions into iosm, replace XFA_SKIPPING with a